--- a/VCFDemo/Views/Shared/_Layout.cshtml
+++ b/VCFDemo/Views/Shared/_Layout.cshtml
@@ -1,10 +1,10 @@
-@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
+﻿@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - VCFDemo</title>
+    <title>@ViewData["Title"] - VCF App</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">VCFDemo</a>
+                <a asp-area="" asp-controller="Products" asp-action="Index" class="navbar-brand">VCFDemo</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
